Реализолвана ветка sprint_8-solution-time-and-duration, добавлены продолжительность, время начала и конца работы задач, добавлен метод вывода задач по приоритету времени, а также проверка на пересечения задач, весь код был покрыт тестами